--- a/SP4 GDT Team 10/Common/Common.vcxproj.filters
+++ b/SP4 GDT Team 10/Common/Common.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="Source\Vector3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\MouseController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\MatrixStack.h">
@@ -41,6 +44,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\SingletonTemplate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\MouseController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
