--- a/SP4 GDT Team 10/AI/AI.vcxproj.filters
+++ b/SP4 GDT Team 10/AI/AI.vcxproj.filters
@@ -24,6 +24,9 @@
     <Filter Include="GameObjects">
       <UniqueIdentifier>{d4065c97-5426-4698-b511-bd373995b920}</UniqueIdentifier>
     </Filter>
+    <Filter Include="MousePicker">
+      <UniqueIdentifier>{1cd3ac04-e60b-4d78-9708-b14e62501c6d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Application.cpp">
@@ -94,6 +97,9 @@
     </ClCompile>
     <ClCompile Include="Source\Building.cpp">
       <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\MousePicker.cpp">
+      <Filter>MousePicker</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -189,6 +195,9 @@
     </ClInclude>
     <ClInclude Include="Source\Building.h">
       <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\MousePicker.h">
+      <Filter>MousePicker</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
