Added bush object (cpp and h, GO, GEO), when villager occupies same grid as bush, 10 food is added and bush is considered depleted. GameObjects now have a currentPt GridPt attribute that is updated every frame to represent which grid they are in on the map. Changed goVillager to have a scale of half a grid and adjusted position to be centered to a grid. Added food and population resources. Resources will display temporarily as x/x (current/limit) in bottom left of screen. Population limit increases per building that applies. (chiefs hut gives 10)

--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Building.cpp" />
+    <ClCompile Include="Source\Bush.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\ChiefHut.cpp" />
     <ClCompile Include="Source\GameObject.cpp" />
@@ -185,6 +186,7 @@
   <ItemGroup>
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Building.h" />
+    <ClInclude Include="Source\Bush.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\ChiefHut.h" />
     <ClInclude Include="Source\ConcreteMessages.h" />
