--- a/SP4 GDT Team 10/AI/AI.vcxproj.filters
+++ b/SP4 GDT Team 10/AI/AI.vcxproj.filters
@@ -131,6 +131,9 @@
     <ClCompile Include="Source\Environment.cpp">
       <Filter>GameObjects</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Tree.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -251,6 +254,9 @@
       <Filter>UI\UIObjects</Filter>
     </ClInclude>
     <ClInclude Include="Source\Environment.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Tree.h">
       <Filter>GameObjects</Filter>
     </ClInclude>
   </ItemGroup>
