--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="Source\State.cpp" />
     <ClCompile Include="Source\StateMachine.cpp" />
     <ClCompile Include="Source\StateVillager.cpp" />
+    <ClCompile Include="Source\Tree.cpp" />
     <ClCompile Include="Source\UIBase.cpp" />
     <ClCompile Include="Source\UIManager.cpp" />
     <ClCompile Include="Source\UIReligionBar.cpp" />
@@ -220,6 +221,7 @@
     <ClInclude Include="Source\State.h" />
     <ClInclude Include="Source\StateMachine.h" />
     <ClInclude Include="Source\StateVillager.h" />
+    <ClInclude Include="Source\Tree.h" />
     <ClInclude Include="Source\UIBase.h" />
     <ClInclude Include="Source\UIManager.h" />
     <ClInclude Include="Source\UIReligionBar.h" />
