--- a/SP4 GDT Team 10/AI/AI.vcxproj.filters
+++ b/SP4 GDT Team 10/AI/AI.vcxproj.filters
@@ -164,6 +164,12 @@
     <ClCompile Include="Source\Maze.cpp">
       <Filter>Structures</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Altar.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ResearchLab.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -303,6 +309,12 @@
     </ClInclude>
     <ClInclude Include="Source\Message.h">
       <Filter>Utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Altar.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ResearchLab.h">
+      <Filter>GameObjects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
