--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="Source\ChiefHut.cpp" />
     <ClCompile Include="Source\DepthFBO.cpp" />
     <ClCompile Include="Source\EffectBase.cpp" />
+    <ClCompile Include="Source\EffectHand.cpp" />
     <ClCompile Include="Source\EffectManager.cpp" />
     <ClCompile Include="Source\EffectTrail.cpp" />
     <ClCompile Include="Source\Environment.cpp" />
@@ -203,6 +204,7 @@
     <ClInclude Include="Source\ConcreteMessages.h" />
     <ClInclude Include="Source\DepthFBO.h" />
     <ClInclude Include="Source\EffectBase.h" />
+    <ClInclude Include="Source\EffectHand.h" />
     <ClInclude Include="Source\EffectManager.h" />
     <ClInclude Include="Source\EffectTrail.h" />
     <ClInclude Include="Source\Environment.h" />
